--- a/front/src/components/ProfileUser/ProfileUser.module.css
+++ b/front/src/components/ProfileUser/ProfileUser.module.css
@@ -31,3 +31,11 @@
 	font-weight: 600;
 	line-height: normal;
 }
+
+.imagePlaceholder {
+	width: 40px;
+	height: 40px;
+	margin-right: 6px;
+	background-color: var(--black-text);
+	border-radius: 50%;
+}
