--- a/front/src/components/Register/Register.module.css
+++ b/front/src/components/Register/Register.module.css
@@ -41,10 +41,11 @@
 }
 
 .btn {
+	cursor: pointer;
 	width: 100%;
 	padding: 15px 50px;
-	background: none;
-	border: 2px solid var(--main-color);
+	background: var(--main-color);
+	border: 2px solid var(--main-black);
 	font-size: var(--fz16);
 	font-weight: 600;
 	color: var(--main-black);
@@ -52,7 +53,9 @@
 }
 
 .btn:hover {
-	background-color: var(--main-color);
+	background-color: var(--main-black);
+	border: 2px solid var(--main-black);
+	color: var(--main-color);
 }
 
 .btn:not(:last-child) {
